[project]
name = "fortexs"
version = "0.1.0"
description = "A web scraper for fetching products from `www.fortex.ir`"
authors = [
    {name = "Ashkan Feyzollahi",email = "ashkanfeyzollahi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "parsel (>=1.10.0,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "fortexs", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
